---------------------------------------------------------------------------------------------------
Version: 4.1.35
Date: ????
  Features:
    - With omnimatter compression, boilers can directly create (solid-) concentrated steam now
  Changes:
    - Added support for assembler type entities that produce steam for generators
      A recipe copy that outputs fluid (steam) is now added
---------------------------------------------------------------------------------------------------
Version: 4.1.34
Date: 2023.06.19
  Bugfixes:
    - Fixed that not all sluid->fluid conversion recipes were created due to a typo
---------------------------------------------------------------------------------------------------
Version: 4.1.33
Date: 2023.06.18
  Bugfixes:
    - Fixed that some producer temperatures were lost in rare combinations of empty consumer tables
---------------------------------------------------------------------------------------------------
Version: 4.1.32
Date: 2023.06.14
  Bugfixes:
    - Fixed that the offshore pump did not output anything with version 4.1.31
---------------------------------------------------------------------------------------------------
Version: 4.1.31
Date: 2023.06.10
  Changes:
    - WARNING: THIS WILL BREAK SOME OF YOUR BUILDS!
    - SLUID ITEMS NAMES MIGHT CHANGE DUE TO HAVING A DIFFERENT TEMPERATURE!
    - Internal rewrite of the whole temperature logic for sluids.
      This will fix issues with mods that add fluids that have usages in different temperature
      ranges. If a recipe allows a fluid in a sepecific temperature range, recipe copies for
      each possible temperature are created (For all in-raange temperatures that are producable).
---------------------------------------------------------------------------------------------------
Version: 4.1.30
Date: 2023.04.04
  Changes:
    - Moved sluid to fluid conversion recipes from boilers into assemblers. MIGHT BREAK YOUR BASE!